--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "In5lux",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "tslog": "^3.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
