--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "In5lux",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "express": "^4.17.2",
     "inversify": "^6.0.1",
@@ -23,6 +24,7 @@
     "tslog": "^3.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
